yaml/logging/es-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: elasticsearch-logging2
  namespace: kube-system
  labels:
    k8s-app: elasticsearch-logging2
    addonmanager.kubernetes.io/mode: Reconcile
spec:
  replicas: 1
  selector:
    matchLabels:
      k8s-app: elasticsearch-logging2
  template:
    metadata:
      labels:
        k8s-app: elasticsearch-logging2
    spec:
      serviceAccountName: elasticsearch-logging2
      containers:
      - name: elasticsearch-logging2
        image: amazon/opendistro-for-elasticsearch:1.4.0
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 9300
          name: transport
        - containerPort: 9200
          name: http
        - containerPort: 9600
          name: metrics
        volumeMounts:
        - name: elasticsearch-logging2-volume
          mountPath: /usr/share/elasticsearch/data
        - name: es-securityconfig
          mountPath: /usr/share/elasticsearch/plugins/opendistro_security/securityconfig/config.yml
          subPath: config.yml
        - name: es-securityconfig
          mountPath: /usr/share/elasticsearch/plugins/opendistro_security/securityconfig/internal_users.yml
          subPath: internal_users.yml
        ## SDS PaaS - only for test
        ##- name: es-config
        ##  mountPath: /usr/share/elasticsearch/config/elasticsearch.yml
        ##  subPath: elasticsearch.yml
        ##- name: es-config
        ##  mountPath: /usr/share/elasticsearch/config/log4j2.properties
        ##  subPath: log4j2.properties
      volumes:
      - name: elasticsearch-logging2-volume
        emptyDir: {}
      - name: es-securityconfig
        configMap:
          name: elasticsearch-logging2-cm-securityconfig
      ## SDS PaaS - only for test
      ##- name: es-config
      ##  configMap:
      ##    name: elasticsearch-logging2-cm-config
