yaml/logging/es-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: elasticsearch-logging2
  namespace: kube-system
  labels:
    k8s-app: elasticsearch-logging2
    kubernetes.io/cluster-service: "true"
    addonmanager.kubernetes.io/mode: Reconcile
    kubernetes.io/name: "Elasticsearch"
spec:
  ports:
    - name: http
      port: 9200
    - name: transport
      port: 9300
    - name: metrics
      port: 9600
  selector:
    k8s-app: elasticsearch-logging2
